--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 logging-to-file = true        # enables logging of every patch process to a seperate file
 enable-magisk-update = true   # set this to false if you do not want to receive updates for the module in magisk app
-build-mindetach-module = false
+build-mindetach-module = true
 
 # add 'enabled = false' for not patching a specific app or remove it from the config
 # see https://github.com/j-hc/revanced-magisk-module/blob/main/CONFIG.md for more detailed explanations
@@ -18,7 +18,7 @@ module-prop-name = "ytrv-magisk"
 app-name = "YouTube"
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
-rv-brand = "YouTube RVX"
+rv-brand = "YouTube RX"
 build-mode = "apk"
 excluded-patches = ""
 included-patches = ""
