--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,12 @@
 logging-to-file = true        # enables logging of every patch process to a seperate file
 enable-magisk-update = true   # set this to false if you do not want to receive updates for the module in magisk app
-build-mindetach-module = true
+build-mindetach-module = false
 
 # add 'enabled = false' for not patching a specific app or remove it from the config
 # see https://github.com/j-hc/revanced-magisk-module/blob/main/CONFIG.md for more detailed explanations
 
 [YouTube]
+enabled = false
 build-mode = "apk"                                                   # 'both', 'apk' or 'module'
 excluded-patches = ""                                                 # space-seperated patches to exclude (multiline strings are not supported)
 included-patches = ""                                                 # space-seperated patches to include (non-excluded patches are included by default)
@@ -18,20 +19,21 @@ module-prop-name = "ytrv-magisk"
 app-name = "YouTube"
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
-rv-brand = "YouTube RX"
+rv-brand = "rvx-red_@youtube_revanced5"
 build-mode = "apk"
 excluded-patches = ""
 included-patches = ""
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
 [Music-arm64]
-enabled = false
-build-mode = "both"
-app-name = "Music"
+enabled = True
+build-mode = "apk"
+app-name = "YT Music"
+rv-brand = "rvx-red_@youtube_revanced5"
 excluded-patches = ""
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrv-magisk"
-arch = "arm64-v8a"
+
 
 [Music-arm]
 enabled = false
