--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ included-patches = ""
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
 [Music-arm64]
-enabled = True
+enabled = true
 build-mode = "apk"
 app-name = "YT Music"
 rv-brand = "rvx-red_@youtube_revanced5"
