--- a/config.toml
+++ b/config.toml
@@ -27,16 +27,12 @@ included-patches = ""
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
 [Music-arm64]
-build-mode = "apk"
-version = "auto"
+build-mode = "both"
 app-name = "Music"
-patches-source = "inotia00/revanced-patches"
-integrations-source = "inotia00/revanced-integrations"
-rv-brand = "rvx-red_@youtube_revanced5"
 excluded-patches = ""
-included-patches = ""
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrv-magisk"
+arch = "arm64-v8a"
 
 
 [Music-arm]
