--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ module-prop-name = "ytrv-magisk"
 
 [YouTube-Extended]
 app-name = "YouTube"
-version = "18.18.36"
+version = "latest"
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
 rv-brand = "rvx-red_@youtube_revanced5"
@@ -29,7 +29,10 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 [Music-arm64]
 build-mode = "apk"
 app-name = "Music"
+version = "latest"
+rv-brand = "rvx-red_@youtube_revanced5"
 excluded-patches = ""
+included-patches = ""
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrv-magisk"
 arch = "arm64-v8a"
