--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ app-name = "Music"
 version = "latest"
 rv-brand = "rvx-red_@youtube_revanced5"
 excluded-patches = ""
-included-patches = ""
+included-patches = "custom-branding-music-name"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrv-magisk"
 arch = "arm64-v8a"
