--- a/config.toml
+++ b/config.toml
@@ -30,11 +30,13 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 build-mode = "apk"
 app-name = "Music"
 version = "latest"
+patches-source = "inotia00/revanced-patches"
+integrations-source = "inotia00/revanced-integrations"
 rv-brand = "rvx-red_@youtube_revanced5"
 excluded-patches = ""
 included-patches = "custom-branding-music-afn-red"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
-module-prop-name = "ytmusicrv-magisk"
+#module-prop-name = "ytmusicrv-magisk"
 arch = "arm64-v8a"
 
 
