--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,7 @@ patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
 rv-brand = "rvx-red_@youtube_revanced5"
 excluded-patches = ""
-included-patches = "custom-branding-music-afn-red"
+included-patches = "custom-branding-music-name custom-branding-music-afn-red"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 #module-prop-name = "ytmusicrv-magisk"
 arch = "arm64-v8a"
