--- a/config.toml
+++ b/config.toml
@@ -20,9 +20,9 @@ app-name = "YouTube"
 version = "latest"
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
-rv-brand = "rvx-red_@youtube_revanced5"
+rv-brand = "rvx-rfb_@youtube_revanced5"
 build-mode = "apk"
-excluded-patches = ""
+excluded-patches = "custom-branding-icon-afn-red"
 included-patches = ""
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
@@ -32,11 +32,11 @@ app-name = "Music"
 version = "latest"
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
-rv-brand = "rvx-red_@youtube_revanced5"
-excluded-patches = ""
-included-patches = "custom-branding-music-name custom-branding-music-afn-red"
+rv-brand = "rvx-rfb_@youtube_revanced5"
+excluded-patches = "custom-branding-music-afn-red"
+included-patches = "custom-branding-music-name custom-branding-music-revancify-blue"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
-#module-prop-name = "ytmusicrv-magisk"
+module-prop-name = "ytmusicrv-magisk"
 arch = "arm64-v8a"
 
 
